--- a/src/public/css/styles-index.css
+++ b/src/public/css/styles-index.css
@@ -70,7 +70,7 @@
         /* Botões */
         .btn {
             display: inline-block;
-            padding: 1.5rem 1rem;
+            padding: 0.5rem;
             border-radius: var(--border-radius);
             text-decoration: none;
             font-weight: 600;
@@ -142,7 +142,7 @@
             text-decoration: none;
             font-weight: 500;
             transition: var(--transition);
-            padding: 1.5rem 0rem;
+            padding: 0.4rem 0.4rem;
             border-radius: var(--border-radius);
         }
 
@@ -546,6 +546,7 @@
 
         /* Desktop */
         @media (min-width: 1024px) {
+            
             .projects-grid {
                 grid-template-columns: repeat(3, 1fr);
             }
