--- a/src/views/aluno-online.ejs
+++ b/src/views/aluno-online.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Inclusão Digital</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/alunoOnline.css">
+    <link rel="stylesheet" href="css/aluno-online.css">
 </head>
 <body>
     <div class="container">
