--- a/src/views/login-aluno.ejs
+++ b/src/views/login-aluno.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Inclusão Digital</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/loginAluno.css">
+    <link rel="stylesheet" href="css/login-aluno.css">
 </head>
 <body>
     <div class="login-container">
