--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -238,7 +238,7 @@
                                 alt="Projeto Esporte e Saúde" />
                         </figure>
                         <div class="project-content">
-                            <h3 class="project-title">Novo Projeto</h3>
+                            <h3 class="project-title">CMais Projetos</h3>
                             <p class="project-description">
                                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                                 nulla pariatur.
