--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infância Conectada</title>
-    <link rel="stylesheet" href="styles-index.css">
+    <link rel="stylesheet" href="css/styles-index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -415,7 +415,7 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
