--- a/src/views/cadastro-aluno.ejs
+++ b/src/views/cadastro-aluno.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Aluno - Inclusão Digital</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/cadastro-aluno.css">
+    <link rel="stylesheet" href="css/styles-cadastro-aluno.css">
     </head>
 <body>
     <div class="signup-container">
@@ -110,6 +110,6 @@
             </p>
         </div>
     </div>
- <script src="js/cadastro-aluno.js"></script>
+ <script src="js/script-cadastro-aluno.js"></script>
 </body>
 </html>
