--- a/src/views/login-instituicao.ejs
+++ b/src/views/login-instituicao.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Inclusão Digital</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/login-instituicao.css">
+    <link rel="stylesheet" href="css/styles-login-instituicao.css">
     
 </head>
 <body>
@@ -68,7 +68,7 @@
             </a>
         </div>
     </div>
-<script src="js/login-instituicao.js"></script>
+<script src="js/script-login-instituicao.js"></script>
    
 </body>
 </html>
