--- a/src/views/cadastro-aluno.ejs
+++ b/src/views/cadastro-aluno.ejs
@@ -10,9 +10,8 @@
 <body>
     <div class="signup-container">
         <div class="header-section">
-            <div class="logo">ID</div>
+            <div class="logo">Infância Conectada</div>
             <h1>Cadastro de Aluno</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
         </div>
 
         <form id="signupForm" class="signup-form">
@@ -102,12 +101,7 @@
             </button>
         </form>
 
-        <div class="info-section">
-            <p>
-                Ao criar sua conta, você terá acesso a todos os cursos de 
-                <span class="info-highlight">inclusão digital</span> da nossa plataforma. 
-                Seus dados estão seguros e protegidos conosco.
-            </p>
+
         </div>
     </div>
  <script src="js/script-cadastro-aluno.js"></script>
