--- a/src/views/login-aluno.ejs
+++ b/src/views/login-aluno.ejs
@@ -12,9 +12,10 @@
 <body>
     <div class="login-container">
         <div class="login-card">
-            <div class="logo">ID</div>
+            <div class="logo">Infância Conectada</div>
+            <img src="images/logo-infancia.png" alt="Logo Infância Conectada" id="logotipo">
             <h1 class="title">Bem-vindo!</h1>
-            <p class="subtitle">Entre na sua conta para acessar a plataforma de inclusão digital</p>
+            <p class="subtitle">Entre na sua conta Infância Conectada</p>
 
             <form id="loginForm">
                 <div class="form-group">
@@ -31,11 +32,6 @@
 
                 <button type="submit" class="login-button">Entrar</button>
             </form>
-
-            <div class="forgot-password">
-                <a href="#">Esqueceu sua senha?</a>
-            </div>
-
 
         </div>
     </div>
