--- a/src/views/login-instituicao.ejs
+++ b/src/views/login-instituicao.ejs
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <div class="logo-section">
-            <div class="logo">ID</div>
+            <div class="logo">Infância Conectada</div>
             <div class="welcome-text">
                 <h1>Bem-vindo de volta</h1>
                 <p>Acesse sua conta institucional</p>
@@ -48,25 +48,8 @@
                 </div>
             </div>
 
-            <div class="forgot-password">
-                <a href="#" onclick="showForgotPassword()">Esqueceu sua senha?</a>
-            </div>
+            <a href="#" id="esqueceu">Esqueceu a senha?</a>
 
-            <button type="submit" class="login-btn">
-                Entrar na Plataforma
-            </button>
-        </form>
-
-        <div class="divider">
-            <span>Precisa de ajuda?</span>
-        </div>
-
-        <div class="support-section">
-            <p>Entre em contato com nossa equipe</p>
-            <a href="mailto:suporte@inclusaodigital.org.br" class="support-link">
-                suporte@inclusaodigital.org.br
-            </a>
-        </div>
     </div>
 <script src="js/script-login-instituicao.js"></script>
    
