--- a/src/public/css/styles-login-instituicao.css
+++ b/src/public/css/styles-login-instituicao.css
@@ -66,7 +66,7 @@
         }
 
         .logo {
-            width: 80px;
+            width: 200px;
             height: 80px;
             background: linear-gradient(135deg, var(--color-primary), var(--color-secondary));
             border-radius: 20px;
@@ -78,6 +78,7 @@
             font-weight: 700;
             color: white;
             box-shadow: 0 15px 35px rgba(59, 130, 246, 0.3);
+            padding: 50px 120px;
         }
 
         .welcome-text h1 {
@@ -257,3 +258,8 @@
             }
         }
    
+        #esqueceu {
+            text-decoration: none;
+            color: whitesmoke;
+        }
+        
