refactory-Atualizando galeria->projetos

--- a/src/views/h&f/header-infancia.ejs
+++ b/src/views/h&f/header-infancia.ejs
@@ -19,8 +19,7 @@
                 <ul class="nav-list">
                     <li><a href="/" class="nav-link active">Home</a></li>
                     <li><a href="/#sobre" class="nav-link">Sobre</a></li>
-                    <li><a href="/#projetos" class="nav-link">Projetos</a></li>
-                    <li><a href="/galeria" class="nav-link">Galeria</a></li>
+                    <li><a href="/projetos" class="nav-link">Projetos</a></li>
                     <li><a href="/#doacoes" class="nav-link">Doações</a></li>
                     
                 </ul>
