--- a/src/views/h&f/header-infancia.ejs
+++ b/src/views/h&f/header-infancia.ejs
@@ -27,7 +27,7 @@
             
             <div class="auth-section">
                 <div class="login-buttons">
-                    <a href="/login-instituicao"></a><button class="login-btn institution-btn">
+                    <a href="/login-instituicao"><button class="login-btn institution-btn">
                         <svg width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM12.5 16v-1a4.5 4.5 0 0 0-9 0v1h9z"/>
                         </svg>
@@ -93,7 +93,7 @@
             </ul>
             
             <div class="mobile-auth">
-                <button class="mobile-login-btn institution-btn">Instituição</button>
+                 <a href="/login-instituicao"><button class="mobile-login-btn institution-btn">Instituição</button></a>
                 <button class="mobile-login-btn children-btn">Alunos</button>
             </div>
         </div>
