--- a/src/views/login-aluno.ejs
+++ b/src/views/login-aluno.ejs
@@ -10,33 +10,35 @@
 </head>
 
 <body>
-    <div class="login-container">
-        <div class="login-card">
-            <div class="logo">Infância Conectada</div>
-            <img src="images/logo-infancia.png" alt="Logo Infância Conectada" id="logotipo">
-            <h1 class="title">Bem-vindo!</h1>
-            <p class="subtitle">Entre na sua conta Infância Conectada</p>
 
-            <form id="loginForm">
-                <div class="form-group">
-                    <label class="form-label" for="nickname">Nickname</label>
-                    <input type="text" id="nickname" name="nickname" class="form-input"
-                        placeholder="Digite seu nickname" required>
-                </div>
+    <div class="login-card">
+        <div class="logo">Infância Conectada</div>
+        <img src="images/logo-infancia.png" alt="Logo Infância Conectada" id="logotipo">
+        <h1 class="title">Bem-vindo!</h1>
+        <p class="subtitle">Entre na sua conta Infância Conectada</p>
 
-                <div class="form-group">
-                    <label class="form-label" for="password">Senha</label>
-                    <input type="password" id="password" name="password" class="form-input"
-                        placeholder="Digite sua senha" required>
-                </div>
+        <form id="loginForm">
+            <div class="form-group">
+                <label class="form-label" for="nickname">Nickname</label>
+                <input type="text" id="nickname" name="nickname" class="form-input" placeholder="Digite seu nickname"
+                    >
+            </div>
 
-                <button type="submit" class="login-button">Entrar</button>
-            </form>
+            <div class="form-group">
+                <label class="form-label" for="password">Senha</label>
+                <input type="password" id="password" name="password" class="form-input" placeholder="Digite sua senha"
+                    >
+            </div>
 
-        </div>
+            <button type="submit" class="login-button">Entrar</button>
+            <br><br>
+            <a href="/" style="color: whitesmoke; text-align: center; text-decoration: none;"> <- Voltar</a>
+        </form>
+
     </div>
-
-    <script src="js/script-login-aluno.js"></script>
+<div class="login-container">
+        <script src="js/script-login-aluno.js"></script>
+        <div>
 
 </body>
 
